Initial refactoring. Working simple cases, extensions not yet ready.